--- a/test_site.html
+++ b/test_site.html
@@ -44,7 +44,7 @@ My research focuses on mitochondrial genetic disease, specifically on mitochondr
 </ul>
 
 <p style="font-family:arial;margin-left: 10em;margin-right: 10em">
-Previously, I have worked on generating transplantable iPSC-derived cell therapy products, modeled hematapoeitc development in vitro, and studied aberrant cell signaling in the development of skin fibrosis.
+Previously, I have worked on generating transplantable iPSC-derived cell therapy products, modeled hematopoietic development in vitro, and studied aberrant cell signaling in the development of skin fibrosis.
 </p>
 
 
