--- a/test_site.html
+++ b/test_site.html
@@ -13,6 +13,13 @@
   margin-right: auto;
   width: 10%;
 }
+.center_image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+}
+
 </style>
 
 <body>
@@ -20,38 +27,71 @@
 <h1 style="font-family:arial;text-align:center" class="title">  Nathaniel K. Mullin</h1>
 
 <div class="figure">
-<p><img src="https://medicine.uiowa.edu/mstp/sites/medicine.uiowa.edu.mstp/files/MullinNathaniel.jpg" alt="https://medicine.uiowa.edu/mstp/sites/medicine.uiowa.edu.mstp/files/MullinNathaniel.jpg" class="center" />
+<p><img src="https://medicine.uiowa.edu/mstp/sites/medicine.uiowa.edu.mstp/files/MullinNathaniel.jpg" alt="MullinNathaniel.jpg" class="center" style="border: 2px solid #000;" />
 
+
+    <img src="https://github.com/nkmullin/personal_site/blob/main/Asset%2034@600x-50.jpg?raw=true" id="eye" alt="eye">
+
+    <style>
+        #eye {
+            animation: fly 12s linear 0s infinite;  
+            position:  fixed;
+            top: 40%;
+            width: 300px;
+            opacity: 0.3;
+        }
+
+        @keyframes fly {
+            from {
+                left: 110%;
+            }
+            to {
+                left: -10%;
+            }
+        }
+    </style>
 
 
 </p>
 </div>
 
-<p style="font-family:arial;margin-left: 10em;margin-right: 10em;">
+<p style="font-family:arial;margin-left: 20em;margin-right: 20em;">
 I am an MD/PhD candidate at the University of Iowa where I am co-supervised by <a href="https://choroidlab.org/node/54">Robert Mullins</a> and <a href="https://www.patient-stemcells.org/tucker">Budd Tucker</a>. I am associated with the <a href="https://ivr.uiowa.edu/">Institute for Vision Research (IVR)</a>, the <a href="https://medicine.uiowa.edu/mstp/profiles/Nate-Mullin">Medical Scientist Training Program (MSTP)</a>, and the <a href="https://genetics.grad.uiowa.edu/people/nathaniel-mullin">Interdisciplinary Graduate Program in Genetics (IGPG)</a>.
 </p>
 
 
 
-<p style="font-family:arial;margin-left: 10em;margin-right: 10em">
+<p style="font-family:arial;margin-left: 20em;margin-right: 20em">
 My research focuses on mitochondrial genetic disease, specifically on mitochondrial variants that cause blindness. Experimental techniques I use to understand this class of disease include: 
 </p>
 
-<ul class="org-ul" style="font-family:arial;margin-left: 10em;margin-right: 10em">
+<ul class="org-ul" style="font-family:arial;margin-left: 20em;margin-right: 20em">
 <li>Single cell genomic studies of primary patient tissues (scRNAseq and scATACseq)</li>
 <li>Modeling retinal development in the presence of mitochondrial mutations using patient-derived iPSCs</li>
 <li>Testing the effect of mitochondrial variants on cellular phenotype using iPSC-derived retinal cells</li>
 </ul>
 
-<p style="font-family:arial;margin-left: 10em;margin-right: 10em">
-Previously, I have worked on generating transplantable iPSC-derived cell therapy products, modeled hematopoietic development in vitro, and studied aberrant cell signaling in the development of skin fibrosis.
+<p style="font-family:arial;margin-left: 20em;margin-right: 20em">
+Previously, I have worked on generating transplantable iPSC-derived cell therapy products, modeled hematapoeitc development <em>in vitro</em>, and studied aberrant cell signaling in the development of skin fibrosis.
 </p>
 
 
 
-<p style="font-family:arial;margin-left: 10em;margin-right: 10em">
+<p style="font-family:arial;margin-left: 20em;margin-right: 20em">
 You can find my <a href="https://scholar.google.com/citations?user=Sd5i5UwAAAAJ&hl=en">Google Scholar Profile here</a> and <a href="https://twitter.com/nadmullin?lang=en">my Twitter profile here</a>. 
 </p>
+
+<div class="figure">
+<a href="https://gossipsweb.net"><img src="https://gossipsweb.net/images/twwmwh-blue.jpg" alt="This website was made with hands." style="; border: 1px solid #000;" class="center_image" /></a>
+</p>
+</div>
+
+
+
+
+
+
+
 
 </body>
 </html>
